// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`config/secrets applySecretsToConfig(config) replaces secrets in a array of objects 1`] = `
Object {
  "hostRules": Array [
    Object {
      "hostType": "npm",
      "token": "abc123==",
    },
  ],
}
`;

exports[`config/secrets applySecretsToConfig(config) replaces secrets in a array of strings 1`] = `
Object {
  "allowedManagers": Array [
    "npm",
  ],
}
`;

exports[`config/secrets applySecretsToConfig(config) replaces secrets in a subobject 1`] = `
Object {
  "npm": Object {
    "npmToken": "abc123==",
  },
}
`;

exports[`config/secrets applySecretsToConfig(config) replaces secrets in the top level 1`] = `
Object {
  "npmToken": "abc123==",
}
`;
